# 3stacks-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
.cursor/plans/: bot-ee684eb9.plan.md  lambda-ea105750.plan.md  spy-65ce6639.plan.md  t-48f54c3b.plan.md
.github/workflows/: release.yml
Lambda-bot/: Cargo.toml  README.md  env.example
Lambda-bot/src/: main.rs
Lambda-bot/src/automation/: mod.rs  test.rs
Lambda-bot/src/finance/: mod.rs  price.rs
Lambda-bot/src/models/: price.rs
Lambda-bot/test/: price_stream.rs
build-docs/database/: stock_list.sql  wacthlist_symbols.sql
build-docs/stacks-bot-docs/: fundamentals.md
build-docs/stacks-bot-docs/json_output/: earnings_output.json  fundamentals_output.json  holders_output.json  quote_output.json
docs/models/: fundamentals.md
docs/service/automation/earnings/: after_daily_report.md  daily_report.md  weekly_report.md
docs/service/automation/option_data/: spy_data.md
docs/service/commands/: earnings.md  fundamentals.md  holders.md  mention.md  news.md  options.md  quotes.md
src/: main.rs
src/models/: earnings.rs  fundamentals.rs  holders.rs  mod.rs  news.rs  quotes.rs
src/service/: mod.rs
src/service/automation/: mod.rs
src/service/command/: earnings.rs  fundamentals.rs  holders.rs  mod.rs  news.rs  quotes.rs
src/service/finance/: earnings.rs  fundamentals.rs  holders.rs  mod.rs  news.rs  options.rs  quotes.rs
tests/: earnings_integration.rs  fundamentals_integration.rs  holders_integration.rs  news_integration.rs  quotes_integration.rs
(+6 files in other folders)
